force-app/main/default/objects/FSM_CMDTLevel2__mdt/FSM_CMDTLevel2__mdt.object-meta.xml
<CustomObject>
    <label>CMDT Level 2</label>
    <pluralLabel>CMDT Level 2s</pluralLabel>
</CustomObject>