force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_AutomationLogic__c.field-meta.xml
<CustomField>
    <fullName>FSM_AutomationLogic__c</fullName>
    <description>Created as part of SFS-1652</description>
    <label>Automation Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action</fullName>
                <default>true</default>
                <label>No Action</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Auto-scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>