force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_CodeGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_CodeGroup__c</fullName>
    <description>Created as part of SFS-3011</description>
    <label>Code Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status</fullName>
                <default>true</default>
                <label>Status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>