force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_ExcludeCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExcludeCurrentUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-1652.</description>
    <label>Exclude Current User</label>
    <type>Checkbox</type>
</CustomField>