force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_MPValCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_MPValCode__c</fullName>
    <description>Created as part of SFS-3011</description>
    <label>Status/ MP Val Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
                <default>true</default>
                <label>Done</label>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
            <value>
                <fullName>Not Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>