force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of shift</fullName>
                <default>true</default>
                <label>End of shift</label>
            </value>
            <value>
                <fullName>Emergency/Reactive Work</fullName>
            </value>
            <value>
                <fullName>Unplanned absence</fullName>
            </value>
            <value>
                <fullName>Travel delays</fullName>
            </value>
            <value>
                <fullName>CUSTOMER Not at home</fullName>
            </value>
            <value>
                <fullName>Requested by Customer</fullName>
            </value>
            <value>
                <fullName>No access-Customer/Land owner</fullName>
            </value>
            <value>
                <fullName>Customer site not ready</fullName>
            </value>
            <value>
                <fullName>Adverse weather conditions</fullName>
            </value>
            <value>
                <fullName>Incorrect Skills</fullName>
            </value>
            <value>
                <fullName>Obstruction removal required</fullName>
            </value>
            <value>
                <fullName>Dangerous situation</fullName>
            </value>
            <value>
                <fullName>Engineering Difficulties</fullName>
            </value>
            <value>
                <fullName>Additional resource</fullName>
            </value>
            <value>
                <fullName>Incorrect</fullName>
            </value>
            <value>
                <fullName>Part unavailable</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
            <value>
                <fullName>System error</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
            </value>
            <value>
                <fullName>Further visit/work required</fullName>
            </value>
            <value>
                <fullName>No work required</fullName>
            </value>
            <value>
                <fullName>No access/Parking</fullName>
            </value>
            <value>
                <fullName>Traffic Mgnt not available</fullName>
            </value>
            <value>
                <fullName>Traffic Mgnt not booked</fullName>
            </value>
            <value>
                <fullName>Duplicate operation</fullName>
            </value>
            <value>
                <fullName>Work conflict</fullName>
            </value>
            <value>
                <fullName>Permission to dig required</fullName>
            </value>
            <value>
                <fullName>Traffic Management Incorrect</fullName>
            </value>
            <value>
                <fullName>Time constraints (Day/Time)</fullName>
            </value>
            <value>
                <fullName>Same Day Rein needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>