force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_TMAConditionCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAConditionCode__c</fullName>
    <label>Condition Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>