force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_TMAConditionDescription__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAConditionDescription__c</fullName>
    <label>Condition Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>