force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_Type__c.field-meta.xml
<CustomField>
    <fullName>FSM_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejection</fullName>
                <default>true</default>
                <label>Rejection</label>
            </value>
            <value>
                <fullName>Meter Details</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Code Group</fullName>
            </value>
            <value>
                <fullName>OnHold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>TMA Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>