force-app/main/default/objects/FSM_CMDTLevel2__mdt/fields/FSM_Workmate__c.field-meta.xml
<CustomField>
    <fullName>FSM_Workmate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-2987</description>
    <label>Workmate</label>
    <type>Checkbox</type>
</CustomField>