force-app/main/default/objects/FSM_CMDTLevel2__mdt/listViews/AutoSchedule.listView-meta.xml
<ListView>
    <fullName>AutoSchedule</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>FSM_AutomationLogic__c</columns>
    <columns>FSM_RejectionCategory__c</columns>
    <columns>FSM_RejectionReason__c</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_AutomationLogic__c</field>
        <operation>equals</operation>
        <value>Auto-scheduled</value>
    </filters>
    <label>AutoSchedule</label>
</ListView>