force-app/main/default/objects/FSM_CMDTLevel2__mdt/listViews/CMDT_2_Suspension.listView-meta.xml
<ListView>
    <fullName>CMDT_2_Suspension</fullName>
    <columns>DeveloperName</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_Type__c</columns>
    <columns>FSM_SuspendCategory__c</columns>
    <columns>FSM_SuspendReason__c</columns>
    <columns>FSM_SAPName__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Type__c</field>
        <operation>equals</operation>
        <value>Suspension</value>
    </filters>
    <label>CMDT 2_Suspension</label>
</ListView>