force-app/main/default/objects/FSM_CMDTLevel2__mdt/listViews/Code_Group.listView-meta.xml
<ListView>
    <fullName>Code_Group</fullName>
    <columns>FSM_CodeGroup__c</columns>
    <columns>FSM_MPValCode__c</columns>
    <columns>FSM_SAPName__c</columns>
    <columns>FSM_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Type__c</field>
        <operation>equals</operation>
        <value>Code Group</value>
    </filters>
    <label>Code Group</label>
</ListView>