force-app/main/default/objects/FSM_CMDTLevel2__mdt/listViews/FSM_OnHoldReasons.listView-meta.xml
<ListView>
    <fullName>FSM_OnHoldReasons</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FSM_Type__c</columns>
    <columns>FSM_OnHoldReason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Type__c</field>
        <operation>equals</operation>
        <value>OnHold</value>
    </filters>
    <label>On Hold Reasons</label>
</ListView>