force-app/main/default/objects/FSM_CMDTLevel2__mdt/listViews/Workmate_Rejection.listView-meta.xml
<ListView>
    <fullName>Workmate_Rejection</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_RejectionCategory__c</columns>
    <columns>FSM_RejectionReason__c</columns>
    <columns>FSM_Workmate__c</columns>
    <columns>FSM_AutomationLogic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Workmate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Workmate Rejection</label>
</ListView>